--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
-body {
-    margin: 60px auto;
-    width: 70%;
+html {
     background-color: forestgreen;
     color: #fff !important;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+body {
+    margin: 60px auto;
+    width: 70%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
